src/test/ui/xc-private-method.stderr
error[E0624]: associated function `static_meth_struct` is private
  --> $DIR/xc-private-method.rs:6:44
   |
LL |     let _ = xc_private_method_lib::Struct::static_meth_struct();
   |                                            ^^^^^^^^^^^^^^^^^^ private associated function

error[E0624]: associated function `static_meth_enum` is private
  --> $DIR/xc-private-method.rs:9:42
   |
LL |     let _ = xc_private_method_lib::Enum::static_meth_enum();
   |                                          ^^^^^^^^^^^^^^^^ private associated function

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0624`.
